src/test/deca/syntax/valid/SansObjet/ModuloTest.deca
//Description
//  test du modulo
//
//Résultat
//  ok

{
    int x = 5 % 2;
}