src/test/deca/syntax/invalid/SansObjet/MissingInitialization.deca
//Description
//  initialisation manquante
//
//Réponse
//  Erreur syntaxique ligne 9
//  mismatched input

{
    int x =;
}